--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         </div>
         <div>
            
+        <div>
+            <div>
+                <h2>PROJETOS</h2>
+            </div>
+        </div>
         </div>
     </main>
 </body>
