--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
             <div>
                 <h2>PROJETOS</h2>
             </div>
-        </div>
+        <div class="projetos">
+            <div>
+                <a href="https://nathanols.github.io/Tela-login/
+                "><img src="imagens/logo-linkedin.png" alt=""></a>
+            </div>
+            <div>
+                <a href="https://nathanols.github.io/Tela-login/
+                "><img src="imagens/logo-linkedin.png" alt=""></a>
+            </div>
         </div>
     </main>
 </body>
