--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
@@ -12,9 +14,14 @@
         <nav class="navbar">
             <div class="titulo"><p>PORTIFOLIO</p></div>
 
+            <div class="dark-mode">
+                <i id ="mode_icon" class="fa-solid fa-moon"></i>
+            </div>
+
             <div onclick="menuShow()" class="menu-icon">
                 <button><img src="imagens/menu_white_36dp.svg"></button>
             </div>
+
         </nav>
     </header>
         
